# Bitcoin-TxTypes

./: .gitignore  README.md  open.py  pyproject.toml  run.sh  utxos_6000_6999_0001.parquet  utxos_blk_0001.parquet  utxos_http_0001.parquet
framework_bt/: __init__.py  blkfile.py  blkindex.py  classifier.py  cli.py  extractor.py  mempoolsource.py  p2psource.py  rpcsource.py  viewer.py
tests/: test_all_sources.py  test_blkfile.py  test_blkfile_equivalence.py  test_http_vs_rpc.py
unlock_chain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utxos_blk/: utxos_0_9999_0001.parquet  utxos_10000_19999_0001.parquet  utxos_20000_29999_0001.parquet  utxos_30000_39999_0001.parquet  utxos_40000_49999_0001.parquet  utxos_50000_59999_0001.parquet  utxos_60000_69999_0001.parquet  utxos_70000_79999_0001.parquet  utxos_80000_89999_0001.parquet
